# rocket-sessions

./: Cargo.toml  README.md  a.out  rustfmt.toml
src/: in_memory.rs  lib.rs  redis.rs
tests/: redis.rs
