[package]
name = "rocket-sessions"
version = "0.1.0"
edition = "2021"
author = "Tomas Vallotton <tvallotton@uc.cl>"
license = "Apache-2.0"
repository = "git@github.com:tvallotton/rocket-sessions.git"
keywords = ["rocket", "sessions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
in-memory = ["chashmap"]

[dependencies]
async-trait = "0.1.52"
chashmap = { version = "2.2.2", optional = true }
log = { version = "0.4.14", optional = true }
redis = { version = "0.21.5", features = ["aio", "tokio-comp"], optional = true}


[dev-dependencies]
env_logger = "0.9.0"
rand = { version = "0.8.5"}
rocket-sessions = { path =".", features = ["redis", "in-memory", "log"]}
tokio = { version = "1.17.0", features = ["macros", "rt", "time"] }
